--- a/package.json
+++ b/package.json
@@ -5,14 +5,25 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "run-script-os",
+    "test:win32": "SET ISTEST=true&&jest",
+    "test:darwin:linux": "export ISTEST=true&&jest"
   },
   "dependencies": {
+    "@babel/core": "^7.12.17",
+    "@types/jest": "^26.0.20",
     "axios": "^0.21.1",
+    "babel-jest": "^26.6.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "firebase": "^8.2.7",
+    "jest": "^26.6.3",
+    "jest-enzyme": "^7.1.2",
     "next": "10.0.7",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "run-script-os": "^1.1.5"
   },
   "devDependencies": {
     "@types/node": "^14.14.28",
