--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "emulator": "cd ./functions&&npm run build&&cd ./..&&firebase emulators:start",
     "test": "run-script-os",
     "test:win32": "SET ISTEST=true&&jest",
     "test:darwin:linux": "export ISTEST=true&&jest"
@@ -18,6 +19,8 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "firebase": "^8.2.7",
+    "firebase-admin": "^9.5.0",
+    "firebase-functions": "^3.13.2",
     "jest": "^26.6.3",
     "jest-enzyme": "^7.1.2",
     "next": "10.0.7",
