--- a/package.json
+++ b/package.json
@@ -16,22 +16,28 @@
   },
   "dependencies": {
     "@babel/core": "^7.12.17",
+    "@google-cloud/storage": "^5.8.1",
     "@types/jest": "^26.0.20",
     "axios": "^0.21.1",
     "babel-jest": "^26.6.3",
+    "child_process": "^1.0.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
+    "express": "^4.17.1",
     "firebase": "^8.2.7",
     "firebase-admin": "^9.5.0",
     "firebase-functions": "^3.13.2",
+    "google-cloud-bucket": "^1.0.0",
     "jest": "^26.6.3",
     "jest-enzyme": "^7.1.2",
+    "multer": "^1.4.2",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "run-script-os": "^1.1.5"
   },
   "devDependencies": {
+    "@types/multer": "^1.4.5",
     "@types/node": "^14.14.28",
     "@types/react": "^17.0.2",
     "typescript": "^4.1.5"
